<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">TransSiberian</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_definition">Definition</string>
    <string name="title_activity_translate">Translate</string>
    <string name="title_activity_landing">Landing</string>
    <string name="title_activity_exchange">Exchange</string>
    <string name="preference_file_key">com.naohman.language.transsiberian.SHARED_PREF_KEY"</string>

    <array name="exchange_spinner">
        <item>Dollars to Rubles</item>
        <item>Rubles to Dollars</item>
    </array>
    <array name="term_language">
        <item>Russian First</item>
        <item>English First</item>
    </array>

    <string name="title_activity_study">Study</string>
    <string name="title_activity_set">Set</string>
    <string name="title_activity_set_list">Sets</string>
    <string name="title_activity_authenticate">Quizlet Authentication</string>
    <string name="title_activity_new_set">NewSet</string>
    <string name="title_activity_new_term">NewTerm</string>
    <string name="title_activity_new_term_or_set">NewTermOrSet</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="add_term">Add Term</string>
    <string name="add_to_set">Add Term to Set</string>
    <string name="cancel">Cancel</string>
    <string name="change_currency">Change Currency</string>
    <string name="connect">Connect</string>
    <string name="continue_string">Continue</string>
    <string name="convert">Convert</string>
    <string name="correct">Correct</string>
    <string name="create">Create</string>
    <string name="create_term">Create term in set</string>
    <string name="definition">Definition</string>
    <string name="definitions_first">Definitions First</string>
    <string name="description">Description</string>
    <string name="delete_set">Delete Set</string>
    <string name="delete_set_prompt">Are you sure you want to delete the set</string>
    <string name="dollar">Dollars</string>
    <string name="done">Done</string>
    <string name="edit_term">Edit Term</string>
    <string name="edit_set">Edit Set</string>
    <string name="english_defs">English Definitions</string>
    <string name="english_terms">English Terms</string>
    <string name="eur">Euro</string>
    <string name="exchange">Exchange</string>
    <string name="fetch_error">Error fetching exchange rate</string>
    <string name="gbp">Pound</string>
    <string name="language">Language</string>
    <string name="incorrect">Incorrect</string>
    <string name="jpy">Yen</string>
    <string name="new_set">New Set</string>
    <string name="new_term">New Term</string>
    <string name="no">No</string>
    <string name="no_images">No Images Available</string>
    <string name="no_internet">Couldn\'t connect to the internet</string>
    <string name="no_terms_warning">You can\'t study a set with no terms</string>
    <string name="no_thanks">No thanks</string>
    <string name="old_currency" formatted="false">Couldn\'t connect to the internet. We have a saved exchange rate that is %s day%s old</string>
    <string name="quizlet">Quizlet</string>
    <string name="refresh">Refresh</string>
    <string name="remove">Remove</string>
    <string name="restart">Restart</string>
    <string name="ruble">Rubles</string>
    <string name="russian_defs">Russian Definitions</string>
    <string name="russian_terms">Russian Terms</string>
    <string name="save">Save</string>
    <string name="save_and_exit">Save and Exit</string>
    <string name="set_name">Set Name</string>
    <string name="skip">Skip</string>
    <string name="study">Study</string>
    <string name="sure">Sure</string>
    <string name="swap">Swap</string>
    <string name="switch_languages">Hey, I noticed you switched the term and definition languages. Do you want to switch all of the terms in this set with their definitions?</string>
    <string name="term">Term</string>
    <string name="terms_first">Terms First</string>
    <string name="to_rate">To Ruble Rate</string>
    <string name="translate">Translate</string>
    <string name="translation_hint">Enter a word or short phrase</string>
    <string name="try_again">Try again</string>
    <string name="warning">Warning</string>
    <string name="usd">Dollar</string>
    <string name="use_old">Use the old Rate</string>
    <string name="yes">Yes</string>

</resources>
