<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dip"
        android:layout_weight="5"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:orientation="vertical"
        android:paddingBottom="@dimen/activity_vertical_margin" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/subheading"
            android:text="@string/set_name"
            />
        <EditText
            android:id="@+id/set_name"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:singleLine="true"
            android:imeOptions="actionNext"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/subheading"
            android:text="@string/description"
            />
        <EditText
            android:id="@+id/set_description"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:singleLine="true"
            android:imeOptions="actionGo"
            />
        <RadioGroup
            android:id="@+id/term_lang"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            >
            <RadioButton
                android:id="@+id/russian_term"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:checked="true"
                android:text="@string/russian_terms"
                />
            <RadioButton
                android:id="@+id/english_term"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/english_terms"
                />
        </RadioGroup>
    </LinearLayout>
    <Button
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:textColor="@color/hi_fg_1"
        android:background="@color/hi_bg_1"
        android:textSize="@dimen/subheading"
        android:text="@string/create"
        android:onClick="createSet"
        />
</LinearLayout>
