<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.naohman.transsiberian.setUp.Landing">
    <Button
        android:id="@+id/translate"
        android:layout_width="match_parent"
        android:layout_height="0dip"
        android:layout_weight="1"
        android:textColor="@color/hi_fg_3"
        android:background="@color/hi_bg_3"
        android:textSize="@dimen/heading"
        android:text="@string/translate"
        />
    <Button
        android:id="@+id/study"
        android:layout_width="match_parent"
        android:layout_height="0dip"
        android:layout_weight="1"
        android:textColor="@color/hi_fg_1"
        android:background="@color/hi_bg_1"
        android:textSize="@dimen/heading"
        android:text="@string/study"
        />
    <Button
        android:id="@+id/exchange"
        android:layout_width="match_parent"
        android:layout_height="0dip"
        android:layout_weight="1"
        android:background="@color/hi_bg_2"
        android:textColor="@color/hi_fg_2"
        android:textSize="@dimen/heading"
        android:text="@string/exchange"
        />
</LinearLayout>
