<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:minWidth="@dimen/large_dialog"
    tools:context="com.naohman.transsiberian.Study.AddTermFragment">
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="@dimen/subheading"
        android:text="@string/new_term"
        />
    <EditText
        android:id="@+id/term_term"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:inputType="text"
        android:imeOptions="actionNext"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="@dimen/subheading"
        android:text="@string/definition"
        />
    <EditText
        android:id="@+id/term_definition"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:inputType="text"
        android:imeOptions="actionGo"/>
    <Button
        android:id="@+id/new_term"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/hi_fg_1"
        android:background="@color/hi_bg_1"
        android:text="@string/add_term"
        />
</LinearLayout>
