<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    tools:context="com.naohman.transsiberian.Translation.Activity.NewTermOrSet">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <LinearLayout
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:layout_weight="8"
            android:orientation="vertical">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/subheading"
            android:text="@string/term"
            />
        <EditText
            android:id="@+id/enter_term"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:singleLine="true"
            android:imeOptions="actionNext"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/subheading"
            android:text="@string/definition"
            />
        <EditText
            android:id="@+id/enter_definition"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:singleLine="true"
            android:inputType="text"
            android:imeOptions="actionDone"
            />
        </LinearLayout>
        <ImageButton
            android:src="@drawable/ic_action_refresh"
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="2"
            android:background="@android:color/transparent"
            android:scaleType="fitCenter"
            android:onClick="swap"
            />
    </LinearLayout>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="@dimen/subheading"
        android:text="@string/add_to_set"
        />
    <ListView
        android:id="@+id/set_lv"
        android:layout_width="match_parent"
        android:layout_height="0dip"
        android:layout_weight="1">
        </ListView>
    <Button
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/hi_fg_1"
        android:background="@color/hi_bg_1"
        android:text="@string/new_set"
        android:onClick="newSet"
        />
</LinearLayout>
