<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.naohman.transsiberian.exchange.Exchange">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="4"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:orientation="vertical">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="horizontal"
            android:clickable="true"
            android:onClick="swap"
            >
            <TextView
                android:id="@+id/input_label"
                android:layout_width="0dip"
                android:layout_height="match_parent"
                android:layout_weight="45"
                android:gravity="center"
                android:textSize="@dimen/heading"
                android:text="@string/dollar"
                />
            <ImageView
                android:id="@+id/swap"
                android:layout_width="0dip"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="10"
                android:contentDescription="@string/swap"
                android:src="@drawable/swap"
                />
            <TextView
                android:id="@+id/output_label"
                android:layout_width="0dip"
                android:layout_height="match_parent"
                android:layout_weight="45"
                android:gravity="center"
                android:textSize="@dimen/heading"
                android:text="@string/ruble"
                />
        </LinearLayout>
        <ProgressBar
            style="?android:attr/progressBarStyleLarge"
            android:id="@+id/loading"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="3"
            android:layout_gravity="center"
            android:visibility="gone"
            />
        <LinearLayout
            android:id="@+id/tv_container"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="3"
            android:orientation="horizontal"
            >
            <EditText
                android:id="@+id/currency_et"
                android:layout_width="0dip"
                android:layout_height="match_parent"
                android:layout_weight="45"
                android:textSize="@dimen/heading"
                android:imeOptions="actionGo"
                android:inputType="numberDecimal"
                />
            <ImageView
                android:layout_width="0dip"
                android:layout_height="wrap_content"
                android:layout_weight="10"
                android:layout_gravity="center"
                android:contentDescription="@string/convert"
                android:src="@drawable/ic_action_forward"
                />
            <TextView
                android:id="@+id/currency_tv"
                android:layout_width="0dip"
                android:layout_height="match_parent"
                android:layout_weight="45"
                android:gravity="center"
                android:textSize="@dimen/heading"
                />
        </LinearLayout>
    </LinearLayout>
    <Button
        android:id="@+id/convert"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_weight="2"
        android:textColor="@color/hi_fg_2"
        android:background="@color/hi_bg_2"
        android:textSize="@dimen/heading"
        android:text="@string/convert"
        android:onClick="convert"
        />
</LinearLayout>
